# crossterm-ffi

./: .gitignore  CMakeLists.txt
crossterm-rs/: Cargo.toml
crossterm-rs/src/: attributes.rs  color.rs  cursor.rs  error.rs  event.rs  lib.rs  stream.rs  style.rs  terminal.rs  uint21_t.rs
examples/: CMakeLists.txt  alternate_screen.c  bad_alternate_screen.c  clear_all.c  clear_current_line.c  clear_from_cursor_up.c  clear_purge.c  hide_cursor.c  scroll_down.c  scroll_up.c  show_cursor.c
include/crossterm_ffi/: attribute.h  attributes.h  color.h  cursor.h  error.h  event.h  stream.h  style.h  terminal.h  uint21_t.h
tests/: CMakeLists.txt  stream.c
